# learning-management

./: .coverage  .env.example  .gitignore  README.md  payment_fixtures.json  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py  0002_rename_name_course_title_remove_lesson_name_and_more.py  0003_alter_course_preview_alter_lesson_preview.py  0003_course_updated_at.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_course_price.py
payments/: models.py  serializers.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py  0003_payment_is_paid_payment_payment_url_and_more.py  0004_alter_payment_payment_url.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_moderator_group.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_method.py  0004_alter_user_managers.py  0005_subscription.py  0006_delete_subscription.py  0007_delete_payment.py
